[project]
name = "aiagent"
version = "0.1.0"
description = "Terminal-based AI assistant using LangChain, LangGraph, and OpenAI API to handle calculations, conversions, summaries, time queries, jokes, and greetings via tool-based agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "python-dotenv>=1.1.1",
]
